2007-03-27  Zsolt Foldvari  <zfoldvar@users.sourceforge.net>
	* src/GrampsDb/_DbUtils.py (db_copy): include missing Note table;
	handling Note bookmarks.
	* src/GrampsDb/_GrampsDbWriteXML.py:
	* src/GrampsDb/_GrampsDBDir.py:
	* src/GrampsDb/_GrampsBSDDB.py:
	* src/Bookmarks.py:
	* src/GrampsDbUtils/_ReadXML.py:
	Handling Note bookmarks.

2007-03-27  Zsolt Foldvari  <zfoldvar@users.sourceforge.net>
	* src/GrampsDbUtils/_ReadGrdb.py (importData): include missing Note
	table; handle Note bookmarks.

2007-03-27  Zsolt Foldvari  <zfoldvar@users.sourceforge.net>
	* src/GrampsDb/_GrampsDbBase.py: add note_bookmarks.
	* src/DataViews/_NoteView.py: 'add' and 'remove' functionalities added.
	* src/Editors/_EditNote.py: DeleteNoteQuery added.
	* src/DisplayTabs/_NoteModel.pya: unnecessary delete_tags call removed.
	* src/Utils.py: get_referents() and get_note_referents added();
	get_source_referents() and get_media_referents() rewritten.

2007-03-27  Brian Matherly  <brian@gramps-project.org>
	* src/ReportBase/_ReportDialog.py
	* src/ReportBase/_BareReportDialog.py
	Remove the "pagecount" option from the paper menu in the reports. It is not
	used.

2007-03-27  Don Allingham  <don@gramps-project.org>
	* src/DbManager.py (DbManager.populate): make default directory if it
	does not exist

2007-03-27  Brian Matherly  <brian@gramps-project.org>
	* src/ReportBase/_CommandLineReport.py
	* src/ReportBase/_BareReportDialog.py
	* src/ReportBase/_ReportOptions.py
	* src/plugins/DescendReport.py
	* src/plugins/DetDescendantReport.py
	* src/plugins/AncestorReport.py
	* src/plugins/DetAncestralReport.py
	Remove "get_generations()" from the report options base classes. It was 
	forcing some reports to have the "page break between generations" options
	even though they weren't using it. All reports now define all of their own
	options.

2007-03-26  Brian Matherly  <brian@gramps-project.org>
	* src/plugins/DetDescendantReport.py: fix for multiple notes.
